--- a/cisternas.html
+++ b/cisternas.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="menu">
             <ul>
-                <li><a href="aplicacoes.html">Aplicações</a></li>
+                <li><a href="aplicacoes.html">Aplicativos</a></li>
                 <li><a href="perguntas.html">FAQ</a></li>
                 <li><a href="download.html">Download</a></li>
                 <li><a href="index.html"><img class="homepage" src="imagens/homepage.png"/></a></li>
@@ -32,13 +32,13 @@
                 <table border="1">
                     <tbody>
                         <tr><th class="vantagem">Vantagens</th><th class="desvantagem">Desvantagens</th></tr>
-                        <tr><td>É uma atitude ecologicamente responsável, pois permite o aproveitamento da água da chuva em vez de utilizar o precioso recurso hídrico potável, diminuindo sua pegada hídrica;</td><td>É necessário disciplina: as calhas devem ser limpas (para impedir contaminação através de fezes de ratos ou de animais mortos) e mantidas em boas condições;</td></tr>
-                        <tr><td>Pode ser instalada em qualquer ambiente: rural ou urbano, casa ou apartamento;</td><td>O interior da cisterna também deve ser limpo periodicamente;</td></tr>
-                        <tr><td>Representa uma economia de 50% na conta de água;</td><td rowspan="3">A instalação, se for ligada à rede de encanamentos da casa, precisará de um profissional para rearranjar os encanamentos (lembrando que a água da chuva não pode ser utilizada para consumo porque não é potável), porém, em muitos casos, o investimento é devolvido no primeiro ano, senão nos primeiros meses;</td></tr>
-                        <tr><td>Possui diferentes capacidades de acordo com as suas necessidades - há modelos de minicisterna e cisternas em vários tamanhos, de 80 litros, mil litros e até 16 mil litros;</td></tr>
-                        <tr><td>Ajuda a conter enchentes ao armazenar parte da água que, caso contrário, iria para rios e lagos e diminui o volume de água da chuva no esgoto;</td></tr>
-                        <tr><td>Ajuda em tempos de crise hídrica e é utilizada até em áreas do sertão nordestino como forma de combate às secas;</td><td>Algumas cisternas de plástico podem deformar ou apresentar rachaduras com o tempo. Procure uma com filtro anti-UV 8 ou construa uma de alvenaria;</td></tr>
-                        <tr><td>Pode-se criar uma cultura de sustentabilidade ecológica nas construções, o que poderá garantir uma cisterna em cada casa construída no futuro.</td><td>Caso seja enterrada (ou subterrânea), seu custo de instalação será maior.</td></tr>
+                        <tr><td>- É uma atitude ecologicamente responsável, pois permite o aproveitamento da água da chuva em vez de utilizar o precioso recurso hídrico potável, diminuindo sua pegada hídrica;</td><td>- É necessário disciplina: as calhas devem ser limpas (para impedir contaminação através de fezes de ratos ou de animais mortos) e mantidas em boas condições;</td></tr>
+                        <tr><td>- Pode ser instalada em qualquer ambiente: rural ou urbano, casa ou apartamento;</td><td>- O interior da cisterna também deve ser limpo periodicamente;</td></tr>
+                        <tr><td>- Representa uma economia de 50% na conta de água;</td><td rowspan="3">- A instalação, se for ligada à rede de encanamentos da casa, precisará de um profissional para rearranjar os encanamentos (lembrando que a água da chuva não pode ser utilizada para consumo porque não é potável), porém, em muitos casos, o investimento é devolvido no primeiro ano, senão nos primeiros meses;</td></tr>
+                        <tr><td>- Possui diferentes capacidades de acordo com as suas necessidades - há modelos de minicisterna e cisternas em vários tamanhos, de 80 litros, mil litros e até 16 mil litros;</td></tr>
+                        <tr><td>- Ajuda a conter enchentes ao armazenar parte da água que, caso contrário, iria para rios e lagos e diminui o volume de água da chuva no esgoto;</td></tr>
+                        <tr><td>- Ajuda em tempos de crise hídrica e é utilizada até em áreas do sertão nordestino como forma de combate às secas;</td><td>- Algumas cisternas de plástico podem deformar ou apresentar rachaduras com o tempo. Procure uma com filtro anti-UV 8 ou construa uma de alvenaria;</td></tr>
+                        <tr><td>- Pode-se criar uma cultura de sustentabilidade ecológica nas construções, o que poderá garantir uma cisterna em cada casa construída no futuro.</td><td>- Caso seja enterrada (ou subterrânea), seu custo de instalação será maior.</td></tr>
                         <br/>
                         <br/>
                     </tbody>
