--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="menu">
             <ul>
-                <li><a href="aplicacoes.html">Aplicações</a></li>
+                <li><a href="aplicacoes.html">Aplicativos</a></li>
                 <li><a href="perguntas.html">FAQ</a></li>
                 <li><a href="download.html">Download</a></li>
                 <li><a href="index.html"><img class="homepage" src="imagens/homepage.png"/></a></li>
@@ -45,34 +45,34 @@
             <!---------------------------------------------------------------------------JAVA----------------------------------------------------------------------------->
             <div id="texto">
                 <div id="javatext">
-                    <div id="bloco1">
+                    <div id="bloco1" class="block">
                         <h1>JAVA</h1>
                         <p>O Java permite executar jogos, fazer upload de fotos, bater papo on-line, fazer tours virtuais e usar serviços, como treinamento on-line, transações bancárias on-line e mapas interativos. Se você não tiver o Java, muitas aplicações e websites simplesmente não funcionarão.</p>
                     </div>
-                    <div id="bloco2">
-                        <h1>Uma breve história</h1>
+                    <div id="bloco2" class="block">
+                        <h1>UMA BREVE HISTÓRIA</h1>
                         <p>A Sun criou um time (conhecido como Green Team) para desenvolver inovações tecnológicas em 1992. Esse time foi liderado por James Gosling, considerado o pai do Java. O time voltou com a ideia de criar um interpretador para pequenos dispositivos, facilitando a reescrita de software para aparelhos eletrônicos, como vídeo cassete, televisão e aparelhos de TV a cabo.</p>
                     </div>
-                    <div id="bloco3">
-                        <img align="middle" id="greenteam" alt="Green Team (Sun)" title="Green Team (SUN)" src="imagens/greenteam.jpg" width="400px" height="250px"/>
+                    <div id="bloco3" class="block">
+                        <img  id="greenteam" alt="Green Team (Sun)" title="Green Team (SUN)" src="imagens/greenteam.jpg"/>
                     </div>
                 </div>
             <!---------------------------------------------------------------------------CISTERNAS----------------------------------------------------------------------------->
                 <div id="cisternatext">
-                    <div id="bloco4">
-                        <h3>CISTERNAS</h3>
+                    <div id="bloco4" class="block">
+                        <h1>CISTERNAS</h1>
                             <p>A escassez de água afetará dois terços da população mundial em 2050, segundo relatório da ONU. Isso quer dizer que trabalho e dedicação serão necessários para garantir água potável e segurança alimentar para todos.</p>
                     </div>
-                    <div id="bloco5">
-                        <h3>Algumas medidas para conter isso:</h3>
+                    <div id="bloco5" class="block">
+                        <h1>ALGUMAS MEDIDAS PARA CONTER ISSO:</h1>
                             <ul>
                                 <li>Ser vegetariano uma vez por semana;</li>
                                 <li>Economizar água no dia a dia do condomínio ou na hora de lavar louça;</li>
                                 <li>Cisternas;</li>
                             </ul>
                     </div>
-                    <div id="bloco6">
-                        <video class="video" src="videos/cisterna.mp4" width="400px" height="400px" controls poster="imagens/poster.jpg" preload="auto"></video>
+                    <div id="bloco6" class="block">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3gZK22ihbeI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
