--- a/aplicacoes.html
+++ b/aplicacoes.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="menu">
             <ul>
-                <li><a href="aplicacoes.html">Aplicações</a></li>
+                <li><a href="aplicacoes.html">Aplicativos</a></li>
                 <li><a href="perguntas.html">FAQ</a></li>
                 <li><a href="download.html">Download</a></li>
                 <li><a href="index.html"><img class="homepage" src="imagens/homepage.png"/></a></li>
