--- a/aplicacoes.html
+++ b/aplicacoes.html
@@ -15,15 +15,17 @@
     <body>
         <header>
             <nav class="menu">
-            <ul>
-                <li><a href="aplicacoes.html">Aplicativos</a></li>
-                <li><a href="perguntas.html">FAQ</a></li>
-                <li><a href="download.html">Download</a></li>
-                <li><a href="index.html"><img class="homepage" src="imagens/homepage.png"/></a></li>
-                <li><a href="cisternas.html">Vantagens</a></li>
-                <li><a href="tipos_cisternas.html">Tipos de Cisternas</a></li>
-                <li><a href="formulario.html">Adquira já!</a></li> 
-            </ul>
+            <div id="cmenu">
+                <ul>
+                    <li><a href="aplicacoes.html">Aplicativos</a></li>
+                    <li><a href="perguntas.html">FAQ</a></li>
+                    <li><a href="download.html">Download</a></li>
+                    <li><a href="index.html"><img class="homepage" src="imagens/homepage.png"/></a></li>
+                    <li><a href="cisternas.html">Vantagens</a></li>
+                    <li><a href="tipos_cisternas.html">Cisternas</a></li>
+                    <li><a href="formulario.html">Adquira</a></li> 
+                </ul>
+            </div>
             </nav>
         </header>
         <div class="container">
@@ -103,7 +105,7 @@
             <div id="copyright">
                 <h5 id="esquerda"> &copy; Vinícius Barbosa Ponte - 196110-1 - 2019</h5> 
                 <h5 id="direita"> ADS IFSP 1ºSemestre Turma B </h5>
-            </div>
+           </div>
         </footer>
     </body>
 </html>
